force-app/main/default/objects/BonusIncentivesPolicy__c/BonusIncentivesPolicy__c.object-meta.xml
<CustomObject>
    <label>Bonus &amp; INCC Policy</label>
    <nameField>
        <displayFormat>BI-{000000}</displayFormat>
        <label>BONUS &amp; INCENTIVE POLICY ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus &amp; INCC Policy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>