force-app/main/default/objects/BonusIncentivesPolicy__c/fields/ArchievementRange1st__c.field-meta.xml
<CustomField>
    <fullName>ArchievementRange1st__c</fullName>
    <label>ACHIEVEMENT RANGE(1ST)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ArchievementRange</valueSetName>
    </valueSet>
</CustomField>