force-app/main/default/objects/BonusIncentivesPolicy__c/fields/ArchievementRange2nd__c.field-meta.xml
<CustomField>
    <fullName>ArchievementRange2nd__c</fullName>
    <label>ACHIEVEMENT RANGE(2ND)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ArchievementRange</valueSetName>
    </valueSet>
</CustomField>