force-app/main/default/objects/BonusIncentivesPolicy__c/fields/BonusIncentiveFrequency__c.field-meta.xml
<CustomField>
    <fullName>BonusIncentiveFrequency__c</fullName>
    <label>BONUS &amp; INCENTIVE FREQUENCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncentiveFrequencyType</valueSetName>
    </valueSet>
</CustomField>