force-app/main/default/objects/BonusIncentivesPolicy__c/fields/BonusIncentivePolicyName__c.field-meta.xml
<CustomField>
    <fullName>BonusIncentivePolicyName__c</fullName>
    <label>BONUS &amp; INCENTIVE POLICY NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>