force-app/main/default/objects/BonusIncentivesPolicy__c/fields/CalculationRate1stRange__c.field-meta.xml
<CustomField>
    <fullName>CalculationRate1stRange__c</fullName>
    <label>CALCULATION RATE(1ST RANGE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>