force-app/main/default/objects/BonusIncentivesPolicy__c/fields/CalculationRate2ndRange__c.field-meta.xml
<CustomField>
    <fullName>CalculationRate2ndRange__c</fullName>
    <label>CALCULATION RATE(2ND RANGE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>