force-app/main/default/objects/BonusIncentivesPolicy__c/fields/CalculationRate3rdRange__c.field-meta.xml
<CustomField>
    <fullName>CalculationRate3rdRange__c</fullName>
    <label>CALCULATION RATE(3RD RANGE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>