force-app/main/default/objects/BonusIncentivesPolicy__c/fields/CalculationRate4thRange__c.field-meta.xml
<CustomField>
    <fullName>CalculationRate4thRange__c</fullName>
    <label>CALCULATION RATE(4TH RANGE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>