force-app/main/default/objects/BonusIncentivesPolicy__c/fields/DataUpdateMethod__c.field-meta.xml
<CustomField>
    <fullName>DataUpdateMethod__c</fullName>
    <label>DATA UPDATE METHOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DataUpdateMethod</valueSetName>
    </valueSet>
</CustomField>