force-app/main/default/objects/BonusIncentivesPolicy__c/fields/HRPolicy__c.field-meta.xml
<CustomField>
    <fullName>HRPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Policy</label>
    <referenceTo>HRStandard__c</referenceTo>
    <relationshipLabel>BONUS &amp; INCC POLICY</relationshipLabel>
    <relationshipName>BonusIncentivePolicy</relationshipName>
    <type>Lookup</type>
</CustomField>