force-app/main/default/objects/BonusIncentivesPolicy__c/fields/IncentiveFormula__c.field-meta.xml
<CustomField>
    <fullName>IncentiveFormula__c</fullName>
    <label>INCENTIVE FORMULA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncentiveFormula</valueSetName>
    </valueSet>
</CustomField>