force-app/main/default/objects/BonusIncentivesPolicy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BonusIncentivePolicyName__c</columns>
    <columns>BonusIncentiveFrequency__c</columns>
    <columns>Active__c</columns>
    <columns>StartDate__c</columns>
    <columns>IncentiveFormula__c</columns>
    <columns>BasisNumber__c</columns>
    <columns>CalculationRate1stRange__c</columns>
    <columns>ArchievementRange1st__c</columns>
    <columns>CalculationRate2ndRange__c</columns>
    <columns>ArchievementRange2nd__c</columns>
    <columns>CalculationRate3rdRange__c</columns>
    <columns>ArchievementRange3rd__c</columns>
    <columns>CalculationRate4thRange__c</columns>
    <columns>ArchievementRange4th__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>